--- a/style.css
+++ b/style.css
@@ -1,15 +1,40 @@
 body {
-    background-color: white;
+    background-color: rgba(232, 138, 138, 0.665);
 }
 
 h1 {
     text-align: center;
     font-weight: bold;
-    color: rgba(156, 0, 0, 0.445);
-    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(0, 0, 0);
+    font-family: "Sofia", sans-serif;
 }
 
+h2 {
+    color: rgba(76, 71, 71, 0.705);
+    text-align: left;
+    font-family: "Lucida Console", "Courier New", monospace;
+    font-size: large;
+}
+
+h3 {
+    color: rgba(76, 71, 71, 0.705);
+    text-align: left;
+    font-size: large;
+    font-family: "Lucida Console", "Courier New", monospace;
+}
+
+li {
+    text-align: left;
+    font-family: "Lucida Console", "Courier New", monospace;
+    color: rgba(76, 71, 71, 0.705);
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
 a {
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(76, 71, 71, 0.705);
+    text-align: left;
+    font-family: "Lucida Console", "Courier New", monospace;
 }
